# turbo-notes

./: .gitignore  README.md  claude.md
.claude/: settings.json  settings.local.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/apps/notes/: admin.py  apps.py  conftest.py  models.py  serializers.py  signals.py  test_category_endpoints.py  test_note_endpoints.py  tests.py  urls.py  views.py
backend/apps/notes/migrations/: 0001_initial.py  0002_category_is_system_note.py  0003_remove_category_is_system.py
backend/apps/users/: admin.py  conftest.py  models.py  serializers.py  services.py  test_auth.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  local.py  production.py
docs/: product-specs.md
docs/additions/: auth-throttling.md  jwt-hardening.md  logout.md
docs/additions/infinite-scroll/: 01-backend-cursor-pagination.md  02-frontend-infinite-scroll.md  PRD-infinite-scroll.md
docs/features/backend/: roadmap.md
docs/features/backend/auth-endpoints/: auth-endpoints-tasks.md  auth-endpoints.md
docs/features/backend/category-endpoints/: category-endpoints.md  (+1 more)
docs/features/frontend/: roadmap.md
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts  proxy.ts
frontend/src/__tests__/: middleware.test.ts  proxy.test.ts
frontend/src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/lib/: api-client.ts  auth-constants.ts  mock-data.ts
(+117 files in other folders)
